# tauri-ipc-benchmark

./: Cargo.toml  README.md
src/: main.rs  manymessages.rs  pingpong.rs
