[package]
name = "tauri-ipc-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastwebsockets = { version = "0.7.1", features = ["upgrade"] }
http = "1.1.0"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
serde_json = "1.0.115"
tao = "0.27.0"
tokio = { version = "1.37.0", features = ["full"] }
wry = { version = "0.39.0", features = ["devtools"] }
